# nereus-os

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  flake.nix
.cargo/: config.toml
bootinfo/: Cargo.toml
bootinfo/src/: lib.rs
fonts/: Cargo.toml
fonts/src/: lib.rs
fonts/src/psf/: header.rs  mod.rs
framebuffer/: Cargo.toml
framebuffer/src/: color.rs  error.rs  lib.rs  safe.rs
framebuffer/src/raw/: draw.rs  mod.rs  write.rs
hal/: Cargo.toml
hal/src/: cpu_state.rs  lib.rs
hal/src/asm/: msr.S
hal/src/instructions/: cpuid.rs
hal/src/interrupts/: mod.rs  rflags.rs
hal/src/msr/: efer.rs  mod.rs
hal/src/registers/: mod.rs  rflags.rs
hal/src/registers/msr/: apic.rs  efer.rs  mod.rs  msr_guard.rs
kernel/: Cargo.toml  README.md  linker.ld  x86_64-unknown-nebula.json  x86_64-unknown-nereus.json
kernel/.cargo/: config.toml
kernel/src/: graphics.rs  io.rs  main.rs  memory.rs  scheduling.rs
kernel/src/acpi/: error.rs  mod.rs  rsd.rs  sdt.rs  signature.rs
kernel/src/acpi/madt/: entry.rs  mod.rs
kernel/src/drivers/keyboard/: qwertz.rs
kernel/src/gdt/: descriptor.rs  mod.rs  tss.rs
kernel/src/idt/: descriptor.rs  handler.rs  mod.rs
kernel/src/idt/dispatch/: error.rs  handler.rs  macros.rs  mod.rs
kernel/src/io/: apic.rs  mod.rs  pic.rs
kernel/src/io/apic/: ioapic.rs  lapic.rs  mod.rs
kernel/src/io/keyboard/: mod.rs  qwertz.rs
kernel/src/io/timer/: lapict.rs  mod.rs  pit.rs
kernel/src/memory/: kheap.rs  mod.rs
kernel/src/memory/vmm/: error.rs  mod.rs  object.rs  paging.rs
kernel/src/scheduling/: error.rs  mod.rs  queue.rs
kernel/src/serial/: macros.rs  mod.rs  uart.rs
mem/: Cargo.toml
mem/src/: error.rs  lib.rs  map.rs
mem/src/bitmap_allocator/: map.rs  mod.rs
mem/src/heap/: bump.rs  linked_list.rs  mod.rs
mem/src/paging/: index.rs  mod.rs  ptm.rs
nix/: flash.nix  img.nix  qemu.nix
scheduler/: Cargo.toml
scheduler/src/: lib.rs  memory.rs
scheduler/src/task/: mod.rs
src/: cli.rs  error.rs  file.rs  graphics.rs  img.rs  main.rs  memory.rs
src/file/: elf.rs  mod.rs
src/graphics/: logger.rs  mod.rs
src/run/: clippy.rs  mod.rs  qemu.rs  usb.rs
sync/src/: lib.rs  locked.rs  spin.rs
uefi-loader/: Cargo.toml  README.md
uefi-loader/src/: error.rs  main.rs  memory.rs
uefi-loader/src/file/: elf.rs  mod.rs
uefi-loader/src/graphics/: logger.rs  mod.rs
uefi-loader/src/memory/: bootinfo.rs  mod.rs  stack.rs
