[package]
name = "uefi-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
uefi = { version = "0.33.0", features = [
    "logger",
    "global_allocator",
    "alloc",
] }
thiserror-no-std = "2.0.2"
goblin = { version = "0.9.2", default-features = false, features = [
    "elf64",
    "elf32",
    "endian_fd",
] }

framebuffer = { git = "https://github.com/nebulafoundation/graphics-core.git" }
fonts = { git = "https://github.com/nebulafoundation/graphics-core.git" }
sync = { git = "https://github.com/nebulafoundation/sync.git" }
bootinfo = { git = "https://github.com/nebulafoundation/bootinfo.git" }
mem = { git = "https://github.com/nebulafoundation/mem.git" }
hal = { git = "https://github.com/nebulafoundation/hal.git" }
