[workspace]
members = [
	"uefi-loader",
	"kernel",
	"bootinfo",
	"framebuffer",
	"fonts",
	"hal",
	"mem",
	"sync"
]

resolver = "2"

[package]
name = "nereus-os"
version = "0.1.0"
edition = "2021"
authors = ["Hannah Fluch"]

[dependencies]
serde_json = "1.0.138"
thiserror = "2.0.11"
fatfs = "0.3.6"
fscommon = "0.1.1"
