[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootinfo = { path = "../bootinfo" }
mem = { path = "../mem", features = ["linked-list"]}
framebuffer = { path = "../framebuffer" }
hal = { path = "../hal" }
sync = { path = "../sync" }

bitflags = "2.6.0"
paste = "1.0.15"
thiserror-no-std = "2.0.2"
