[package]
name = "uefi-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
uefi = { version = "0.35.0", features = [
    "logger",
    "global_allocator",
    "alloc",
] }
# todo: change this to crates.io goblin as soon as https://github.com/m4b/goblin/pull/478 is merged.
goblin = { git = "https://github.com/hannahfluch/goblin", default-features = false, features = [
    "elf64",
    "elf32",
    "endian_fd",
] }
framebuffer = { path = "../framebuffer" }
fonts = { path = "../fonts" }
sync = { path = "../sync" }
bootinfo = { path = "../bootinfo" }
mem = { path = "../mem" }
hal = { path = "../hal" }
thiserror = { version = "2.0.12", default-features = false }
